--- a/python-notebooks/List11/list11.ipynb
+++ b/python-notebooks/List11/list11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "e5404b64",
    "metadata": {},
    "outputs": [],
@@ -17,34 +17,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "d98329a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('https://raw.githubusercontent.com/ryupepa/Econometrica/master/python-notebooks/data-csv/sleep75.csv')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/artamonoff/Econometrica/master/python-notebooks/data-csv/Labour.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "b09c442a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>     <td>np.log(output)</td>  <th>  R-squared:         </th> <td>   0.855</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.854</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   553.3</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Sun, 07 May 2023</td> <th>  Prob (F-statistic):</th> <td>1.30e-193</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>00:34:49</td>     <th>  Log-Likelihood:    </th> <td> -353.28</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   569</td>      <th>  AIC:               </th> <td>   716.6</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   564</td>      <th>  BIC:               </th> <td>   738.3</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     4</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>         <td>HC3</td>       <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "             <td></td>                <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>               <td>   -1.3039</td> <td>    0.493</td> <td>   -2.643</td> <td> 0.008</td> <td>   -2.271</td> <td>   -0.337</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>np.log(capital)</th>         <td>    0.1831</td> <td>    0.029</td> <td>    6.215</td> <td> 0.000</td> <td>    0.125</td> <td>    0.241</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>np.log(labour)</th>          <td>    0.5153</td> <td>    0.206</td> <td>    2.497</td> <td> 0.013</td> <td>    0.111</td> <td>    0.920</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>I(np.log(capital) ** 2)</th> <td>    0.0227</td> <td>    0.008</td> <td>    2.737</td> <td> 0.006</td> <td>    0.006</td> <td>    0.039</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>I(np.log(labour) ** 2)</th>  <td>    0.0203</td> <td>    0.021</td> <td>    0.965</td> <td> 0.334</td> <td>   -0.021</td> <td>    0.061</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>202.378</td> <th>  Durbin-Watson:     </th> <td>   1.925</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>2899.488</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 1.152</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td>13.816</td>  <th>  Cond. No.          </th> <td>    270.</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors are heteroscedasticity robust (HC3)"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:         np.log(output)   R-squared:                       0.855\n",
+       "Model:                            OLS   Adj. R-squared:                  0.854\n",
+       "Method:                 Least Squares   F-statistic:                     553.3\n",
+       "Date:                Sun, 07 May 2023   Prob (F-statistic):          1.30e-193\n",
+       "Time:                        00:34:49   Log-Likelihood:                -353.28\n",
+       "No. Observations:                 569   AIC:                             716.6\n",
+       "Df Residuals:                     564   BIC:                             738.3\n",
+       "Df Model:                           4                                         \n",
+       "Covariance Type:                  HC3                                         \n",
+       "===========================================================================================\n",
+       "                              coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "-------------------------------------------------------------------------------------------\n",
+       "Intercept                  -1.3039      0.493     -2.643      0.008      -2.271      -0.337\n",
+       "np.log(capital)             0.1831      0.029      6.215      0.000       0.125       0.241\n",
+       "np.log(labour)              0.5153      0.206      2.497      0.013       0.111       0.920\n",
+       "I(np.log(capital) ** 2)     0.0227      0.008      2.737      0.006       0.006       0.039\n",
+       "I(np.log(labour) ** 2)      0.0203      0.021      0.965      0.334      -0.021       0.061\n",
+       "==============================================================================\n",
+       "Omnibus:                      202.378   Durbin-Watson:                   1.925\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2899.488\n",
+       "Skew:                           1.152   Prob(JB):                         0.00\n",
+       "Kurtosis:                      13.816   Cond. No.                         270.\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors are heteroscedasticity robust (HC3)\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model = smf.ols(data=df, formula='sleep~totwrk+age+I(age**2)+male+smsa+south').fit()"
+    "model = smf.ols(data=df, formula='np.log(output)~np.log(capital)+np.log(labour)+I(np.log(capital)**2)+I(np.log(labour)**2)').fit(cov_type='HC3')\n",
+    "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bd357cda",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Для того, чтобы проверить наличие гетероскедастичности с помощью теста Бройша-Пагана,\n",
     "# необходимо построить вспомогательную регрессию,\n",
-    "#зависимой переменной в которой будут квадраты остатков исходной регресси."
+    "#зависимой переменной в которой будут квадраты остатков исходной регресси.\n",
+    "I(age**2)"
    ]
   },
   {
@@ -60,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cfcc3f76",
    "metadata": {},
    "outputs": [],
@@ -72,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a4466c43",
    "metadata": {},
    "outputs": [],
@@ -114,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "92a1c8d5",
    "metadata": {},
    "outputs": [
@@ -124,7 +233,7 @@
        "8.31"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "744afa3f",
    "metadata": {},
    "outputs": [
@@ -146,7 +255,7 @@
        "12.591587243743977"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
