--- a/python-notebooks/List12/List12.ipynb
+++ b/python-notebooks/List12/List12.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76c56c3d",
+   "id": "ab24c031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "525850f0",
+   "execution_count": 2,
+   "id": "4ff6c8a1",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "29   30  0.548  0.260      90    71    30"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,15 +372,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70a3dbc9",
+   "id": "95edc46a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Intercept    0.20\n",
-       "income       0.00\n",
-       "price       -1.04\n",
+       "Intercept    0.00\n",
+       "income      -0.00\n",
+       "price       -0.93\n",
        "temp         0.00\n",
        "dtype: float64"
       ]
@@ -391,13 +391,14 @@
     }
    ],
    "source": [
-    "model = smf.ols(data=df, formula='cons~income+price+temp').fit()\n",
+    "model = smf.ols(data=df.diff(), formula='cons~income+price+temp').fit()\n",
     "model.params.round(2)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "8bff6ea3",
+   "id": "e6a22a46",
    "metadata": {},
    "source": [
     "$$\n",
@@ -407,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2f3ae46d",
+   "execution_count": 4,
+   "id": "7b718fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ac52ae51",
+   "execution_count": 5,
+   "id": "4212cb54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,8 +432,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6d55e05b",
+   "execution_count": 6,
+   "id": "5b5f090d",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +442,7 @@
        "1.0211693122833503"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,14 +450,6 @@
    "source": [
     "sum_resid/resSq"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "061287e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
